# OpenShell

./: .env.example  .gitlab-ci.yml  CONTRIBUTING.md  README.md  dev-sandbox-policy.rego  mise.toml
.agents/skills/debug-navigator-cluster/: SKILL.md
.agents/skills/tui-development/: SKILL.md
.github/workflows/: e2e-test.yml  publish.yml
architecture/: README.md  build-containers.md  cluster-single-node.md  gateway-security.md  gateway.md  gator.md  inference-routing.md  sandbox-connect.md  sandbox-custom-containers.md  sandbox-providers.md  sandbox.md  security-policy.md  system-architecture.md
crates/navigator-bootstrap/src/: docker.rs  image.rs  kubeconfig.rs  lib.rs  metadata.rs  mtls.rs  paths.rs
crates/navigator-cli/: Cargo.toml
crates/navigator-cli/src/: bootstrap.rs  completers.rs  lib.rs  main.rs  run.rs  ssh.rs  tls.rs
crates/navigator-cli/tests/: mtls_integration.rs
crates/navigator-core/: Cargo.toml
crates/navigator-core/src/: config.rs  error.rs  forward.rs  lib.rs
crates/navigator-policy/: Cargo.toml
crates/navigator-policy/src/: lib.rs
crates/navigator-providers/: Cargo.toml
crates/navigator-router/: Cargo.toml
crates/navigator-router/src/: mock.rs
crates/navigator-router/tests/: backend_integration.rs
crates/navigator-sandbox/: Cargo.toml
crates/navigator-sandbox/src/: grpc_client.rs  lib.rs  log_push.rs  main.rs  process.rs  proxy.rs  ssh.rs
crates/navigator-sandbox/src/sandbox/linux/: landlock.rs
crates/navigator-server/: Cargo.toml
crates/navigator-server/src/: lib.rs  main.rs  multiplex.rs
crates/navigator-server/src/persistence/: mod.rs
crates/navigator-server/src/sandbox/: mod.rs
crates/navigator-tui/: Cargo.toml
crates/navigator-tui/src/: app.rs  lib.rs
crates/navigator-tui/src/ui/: create_sandbox.rs  sandbox_detail.rs  sandboxes.rs
crates/openshell-cli/src/: main.rs
deploy/docker/: Dockerfile.cluster  Dockerfile.python-wheels  Dockerfile.python-wheels-macos  Dockerfile.server  cluster-entrypoint.sh  openclaw-start.sh
deploy/docker/sandbox/: Dockerfile.base
deploy/helm/navigator/: values.yaml
deploy/helm/navigator/templates/: statefulset.yaml
deploy/kube/manifests/: navigator-helmchart.yaml
docs/: index.md
docs/about/: architecture.md  overview.md  release-notes.md
docs/get-started/: quickstart.md
docs/inference/: configure.md  index.md
docs/reference/: cli.md  default-policy.md  policy-schema.md  support-matrix.md
docs/sandboxes/: community-sandboxes.md  create-and-manage.md  index.md  policies.md  providers.md
docs/tutorials/: github-sandbox.md
e2e/bash/: test_port_forward.sh  test_sandbox_custom_image.sh  test_sandbox_sync.sh
e2e/python/: conftest.py  test_inference_routing.py  test_security_tls.py
examples/: bring-your-own-container.md  openclaw.md  sync-files.md  vscode-remote-sandbox.md
examples/bring-your-own-container/: Dockerfile  README.md  app.py
examples/inference/: README.md
python/navigator/: __init__.py  sandbox.py  sandbox_test.py
tasks/scripts/: docker-build-cluster.sh  docker-publish-multiarch.sh
