# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "navigator-providers"
description = "Provider discovery and registry for NemoClaw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
navigator-core = { path = "../navigator-core" }
thiserror = { workspace = true }

[lints]
workspace = true
